# AgentWarden

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: README.md  architecture.md  development.md  privacy.md  product-brief.md
docs/ai/: CHANGELOG_AI.md  CODING_RULES.md  DECISIONS.md  OPEN_QUESTIONS.md  PROJECT_MEMORY.md
extensions/vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode/scripts/: clean.js  prepare-python.js
extensions/vscode/src/: config.ts  controller.ts  extension.ts  statusBar.ts
extensions/vscode/test/: config.test.ts  controller.test.ts  statusBar.test.ts
scripts/: start-agent-warden.ps1
src/agent_warden/: __init__.py  app.py  config.py  models.py
src/agent_warden/overlay/: __init__.py  positioning.py  summary.py  tkinter_overlay.py
src/agent_warden/watchers/: __init__.py  base.py  codex.py
tests/: test_app.py  test_codex_watcher.py  test_config.py  test_overlay_positioning.py  test_overlay_summary.py  test_status_model.py
